<resources>
    <string name="app_name">Tasker</string>
    <string name="action_settings">Settings</string>
    <string name="helloworld">Hello World</string>
    <string name="btnLabel">Add</string>
    <string name="etNewItem">New Task</string>
    <string name="task_name">Task Name</string>
    <string name="date">Task Date:</string>
    <string name="notes">Notes</string>
    <string name="priority">Priority</string>
    <string name="btnDone">Done</string>
    <string name="cbHighPriority">High Priority</string>
    <string name="btnCancel">Cancel</string>

    <string name="menu_save">Save</string>
    <string name="menu_cancel">Cancel</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_add">Add</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_done">Done</string>

    <string name="taskNameOk">""</string>
    <string name="taskNameNotOk">Please enter a task name</string>

    <string name="empty_string">""</string>

    <string name="btnDate_clear">Clear Date</string>
    <string name="btnDate_add">Add Date</string>

    <string name="toast_task_created">Task Created</string>
    <string name="toast_task_updated">Task Updated</string>
    <string name="toast_task_deleted">Task Deleted</string>

</resources>
