<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.android.lm.tasker.activities.MainActivity"
    android:background="@color/colorWhite">
    <android.support.v7.widget.Toolbar
        android:id="@+id/task_edit_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:minHeight="?android:attr/actionBarSize"
        android:background="@color/colorDarkGray"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
        <TextView
            android:id="@+id/tv_toolbar_title"
            android:textSize="@dimen/toolbar_textSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/colorWhite"/>

    </android.support.v7.widget.Toolbar>
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/task_edit_toolbar"
        android:id="@+id/scrollView">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/task_name"
                    android:textSize="20dp"
                    android:id="@+id/textView" />
                <TextView
                    android:id="@+id/tvErrorMsg"
                    android:text="@string/taskNameOk"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:layout_marginLeft="40dp"
                    android:layout_marginStart="40dp"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@+id/textView"
                    android:layout_toEndOf="@+id/textView" />
            </RelativeLayout>
            <EditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/notes"
                android:textSize="20dp" />
            <EditText
                android:id="@+id/etNotes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minLines="2"
                android:scrollbars="vertical"
                android:gravity="top" />
            <CheckBox
                android:id="@+id/cbHighPriority"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cbHighPriority"
                android:textSize="20dp" />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date"
                    android:textSize="20dp"
                    android:layout_centerVertical="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />
                <TextView
                    android:id="@+id/tvDateDisplay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/empty_string"
                    android:textSize="20dp"
                    android:gravity="center_horizontal"
                    android:layout_toEndOf="@+id/textView2"
                    android:layout_toRightOf="@+id/textView2"
                    android:layout_toStartOf="@+id/btnDate"
                    android:layout_toLeftOf="@+id/btnDate"
                    android:layout_centerVertical="true"
                    android:background="@android:color/white"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="5dp" />
                <Button
                    android:id="@+id/btnDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btnDate_add"
                    android:layout_alignTop="@+id/textView2"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true" />
            </RelativeLayout>
            <CalendarView
                android:id="@+id/cvDate"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="67dp">
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="39dp"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true">
                    <!--<Button-->
                        <!--android:id="@+id/btnAdd"-->
                        <!--android:text="@string/btnDone"-->
                        <!--android:onClick="onDone"-->
                        <!--android:layout_width="wrap_content"-->
                        <!--android:layout_height="match_parent"-->
                        <!--android:textSize="17dp" />-->
                    <!--<Button-->
                        <!--android:id="@+id/btnCancel"-->
                        <!--android:text="@string/btnCancel"-->
                        <!--android:onClick="onCancel"-->
                        <!--android:layout_width="wrap_content"-->
                        <!--android:layout_height="match_parent"-->
                        <!--android:textSize="17dp" />-->
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btnCancel"
        android:text="@string/btnCancel"
        android:onClick="onCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="17dp"
        android:layout_above="@+id/scrollView"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:id="@+id/btnAdd"
        android:text="@string/btnDone"
        android:onClick="onDone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="17sp"
        android:layout_above="@+id/scrollView"
        android:layout_toLeftOf="@+id/btnCancel"
        android:layout_toStartOf="@+id/btnCancel"
        android:layout_marginRight="10dp" />
</RelativeLayout>